--- a/Index.css
+++ b/Index.css
@@ -9,34 +9,47 @@ body{
     #grilla{
     display: grid;
     grid-template-areas:
+    "sobre-header"
     "header"
+    "nav-header"
     "carrusel"
     "ofertas"
     "sobre-nosotros"
     "marcas"
     "footer";
     grid-template-columns: 100%;
-    grid-template-rows: 160px repeat(6,auto) ;
+    grid-template-rows: 30px 100px 50px repeat(6,auto) ;
     }
    /* INICIO HEADER */ 
+    #sobre-header{
+        background-color: rgb(165, 44, 44);
+        grid-area: sobre-header;
+    }
+    #sobre-header ul{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
     div#header{
     background-color:#2c3e50;
     border: 1px SOLID black;
     display: grid;
     grid-template-areas: 
-    "header__logo header__buscador header__nav-sup"
-    "header__nav-inf header__nav-inf header__nav-inf";
-    grid-template-columns: 20% auto 30%;
-    grid-template-rows: 65% 35%;
+    "header__logo header__buscador header__nav-sup";
+    grid-template-columns: 20% auto 20%;
+    grid-template-rows: 100%;
     }
     #header__logo{
     grid-area:  header__logo;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
     }
     #header__logo img{
     max-width: 100%;
     max-height: 100%;
-    padding-top: 30px;
-    padding-left: 15%;
+    
     }
     #header__buscador{
     grid-area:  header__buscador;
@@ -55,20 +68,16 @@ body{
     }
     #header__nav-sup{
     grid-area:  header__nav-sup;
-    margin-top: 13px;
-    padding-left: 10px;
-    }
-    
-    #header__nav-inf{
-    grid-area:  header__nav-inf;
     }
     .nav{
-    margin-top: 15px;
     list-style: none;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
     padding-left: 0;
+    }
+    #nav-header{
+        background-color:#2c3e50;
     }
     .nav1{
         list-style:none; 
@@ -111,32 +120,55 @@ body{
     #marcas{
        grid-area: marcas;
     }
-    #ofertas, #marcas{
+    #ofertas{
         background-color: rgba(128, 128, 128, 0.349);
-        margin: 50px;
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows:  auto ;
-        grid-column-gap: 15px;
-        grid-row-gap: 15px;
-        justify-items: stretch;
-        justify-content: stretch;
-        overflow: scroll;
+        margin: 30px;
+        height: 450px;
+        border: 1px solid black;
+        display: flex;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
-    article img{
+    #ofertas article {
+        border: 2px solid #2c3e50;
+        margin: 15px;
+        margin-left: 15px;
+        min-width: 250px;
+        height: 400px;
+        text-align: center;
+        justify-content: space-between;
+        background-color: bisque;
+    }
+    #ofertas article img{
        width: 100%;
+       height: 250px;
     } 
     #sobre-nosotros{
     grid-area: sobre-nosotros;
     background-color: rgba(128, 128, 128, 0.575);
-    margin: 100px;
-    height: 50%;
-    width: 100%;
-    transition: heigth 5s;
+    margin: 30px;
     }
-    #sobre-nosotros:hover{
-        height: 80%;
-        background-color: rgba(128, 128, 128, 0.945);
+    #marcas{
+        background-color: rgba(128, 128, 128, 0.349);
+        margin: 30px;
+        height: 200px;
+        border: 1px solid black;
+        display: flex;
+        overflow-x: auto;
+        overflow-y: hidden;   
+    }
+    #marcas article {
+        border: 2px solid #2c3e50;
+        margin: 15px;
+        margin-left: 15px;
+        min-width: 150px;
+        height: 150px;
+        text-align: center;
+        justify-content: space-between;
+    }
+    #marcas article img{
+        max-width: 100%;
+        max-width: 100%;
     }
     h2{
         text-align: center;
