--- a/Productos.css
+++ b/Productos.css
@@ -5,7 +5,7 @@ body{
     display: grid
 }
 @media screen and (min-width: 320px) {
-    #grilla{
+    #grilla-productos{
     display: grid;
     grid-template-areas:
     "header"
