--- a/Index.css
+++ b/Index.css
@@ -230,6 +230,86 @@ body{
         display: none;
         }
     /* FIN PRODUCTOS */
+
+     /* INICIO CONTACTOS */
+     #grilla-contacto{
+        display: grid;
+        grid-template-areas:
+        "sobre-header"
+        "header"
+        "nav-header"
+        "aside"
+        "formulario"
+        "footer";
+        grid-template-columns: 100%;
+        grid-template-rows: 30px 100px 50px auto auto auto
+    }
+    .aside{
+        grid-area: aside;
+        margin: 40px;
+        max-width: 100%;
+        white-space: initial;
+        overflow: hidden;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .formulario{
+        margin-top: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 100px;
+        grid-area: formulario;
+        display: block;
+        max-width: 100%;
+        height: 100%;
+    }
+    form{
+       border: white;
+    }
+    fieldset{ border: none;
+        display: flex;
+        flex-flow: column nowrap;
+        max-width: 90%;
+        margin: 20px;
+    }
+    fieldset h4{
+        margin-top: 8px;
+        margin-bottom: 5px;
+    }
+    fieldset input{
+        width: 100%;
+        height: 20px;
+        border: 1px solid grey;
+        border-radius: 7px;
+        opacity: .5;
+        transition: opacity .5s;
+    }
+    fieldset input:hover{
+        opacity: 1;
+    }
+    fieldset textarea{
+        width: 100%;
+        height: 200px;
+        border: 1px solid grey;
+        border-radius: 7px;
+        opacity: .5;
+        transition: opacity .5s;
+    }
+    fieldset textarea:hover{
+        opacity: 1;
+    }
+    .submit{
+        width: 80%;
+        height: 50px;
+        background-color: #2c3e50;
+        border: 1px solid #2c3e50;
+        border-radius: 15px;
+        margin-left: 25px;
+        opacity: 1;
+    }
+    /* FIN CONTACTOS */
 }
 @media screen and (min-width: 1200px) {
     #grilla{
@@ -467,7 +547,80 @@ body{
     /* FIN PRODUCTOS */
 
     /* INICIO CONTACTOS */
-
-
+    #grilla-contacto{
+        display: grid;
+        grid-template-areas:
+        "sobre-header sobre-header"
+        "header header"
+        "nav-header nav-header"
+        "aside formulario"
+        "footer footer";
+        grid-template-columns: 35% auto;
+        grid-template-rows: 30px 100px 50px auto auto
+    }
+    .aside{
+        grid-area: aside;
+        margin-left: 200px;
+        margin-right: 30px;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content:stretch ;
+        align-items: baseline;
+    }
+    .aside ul li{
+        color: black;
+    }
+    .formulario{
+        margin-top: 30px;
+        margin-left: 30px;
+        margin-right: 300px;
+        margin-bottom: 100px;
+        grid-area: formulario;
+        display: block;
+        max-width: 900px;
+        height: 100%;
+    }
+    form{
+       border: white;
+    }
+    fieldset{ border: none;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+    fieldset h4{
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    fieldset input{
+        width: 800px;
+        height: 20px;
+        border: 1px solid grey;
+        border-radius: 7px;
+        opacity: .5;
+        transition: opacity .5s;
+    }
+    fieldset input:hover{
+        opacity: 1;
+    }
+    fieldset textarea{
+        width: 800px;
+        height: 200px;
+        border: 1px solid grey;
+        border-radius: 7px;
+        opacity: .5;
+        transition: opacity .5s;
+    }
+    fieldset textarea:hover{
+        opacity: 1;
+    }
+    .submit{
+        width: 750px;
+        height: 50px;
+        background-color: #2c3e50;
+        border: 1px solid #2c3e50;
+        border-radius: 15px;
+        margin-left: 25px;
+        opacity: 1;
+    }
     /* FIN CONTACTOS */
 }
