--- a/Index.css
+++ b/Index.css
@@ -328,7 +328,7 @@ body{
     }
     /* INICIO HEADER */ 
     #sobre-header{
-        background-color: rgb(165, 44, 44);
+        background-color: #c0392b;
         grid-area: sobre-header;
     }
     #sobre-header ul{
@@ -488,7 +488,7 @@ body{
     /* INICIO FOOTER */
     #footer{
         grid-area: footer;
-        background-color: rgba(169, 169, 169, 0.651);
+        background-color: rgba(0, 0, 0, 0.1);
         padding: 10px;
         display: grid;
         grid-template-areas: 
@@ -556,7 +556,7 @@ body{
         "aside formulario"
         "footer footer";
         grid-template-columns: 35% auto;
-        grid-template-rows: 30px 100px 50px auto auto
+        grid-template-rows: 30px 100px 50px auto auto;
     }
     .aside{
         grid-area: aside;
@@ -623,4 +623,55 @@ body{
         opacity: 1;
     }
     /* FIN CONTACTOS */
+    /* INICIO NOSOTROS */
+    #grilla-nosotros{
+        display: grid;
+        grid-template-areas: 
+        "sobre-header sobre-header"
+        "header header"
+        "nav-header nav-header"
+        "nosotros nosotros"
+        "eleginos eleginos"
+        "footer footer";
+        grid-template-columns: 50% auto;
+        grid-template-rows: 30px 100px 50px auto auto auto;
+    }
+    .nosotros{
+        background-color: #2c3e50;
+        grid-area: nosotros;
+        max-height: 500px;
+        overflow-y: hidden;
+        overflow-x: hidden;
+        position: relative;
+    }
+    .nosotros img{
+        width: 100%;
+        opacity: .4;
+    }
+    .blanco{
+        color: white;
+    }
+    .eleginos{
+        display: grid;
+        grid-template-areas: 
+        "texto foto";
+        grid-template-columns: 50% auto;
+        grid-template-rows: 100%;
+        background-color: #2c3e50;
+        height: 500px;
+        grid-area: eleginos;
+    }
+    .texto{
+        grid-area: texto;
+    }
+    .foto{
+        grid-area: foto;
+        display: flex;
+        justify-content: center;
+    }
+    .foto img{
+        height: 80%;
+        opacity: .8;
+    }
+    /* FIN NOSOTROS */
 }
