--- a/Index.css
+++ b/Index.css
@@ -11,14 +11,13 @@ body{
     grid-template-areas:
     "sobre-header"
     "header"
-    "nav-header"
     "carrusel"
     "ofertas"
     "sobre-nosotros"
     "marcas"
     "footer";
     grid-template-columns: 100%;
-    grid-template-rows: 30px 100px 50px repeat(6,auto) ;
+    grid-template-rows: 30px 150px 500px repeat(4,auto) ;
     }
    /* INICIO HEADER */ 
     #sobre-header{
@@ -35,9 +34,13 @@ body{
     border: 1px SOLID black;
     display: grid;
     grid-template-areas: 
-    "header__logo header__buscador header__nav-sup";
-    grid-template-columns: 20% auto 20%;
-    grid-template-rows: 100%;
+    "menu-hambur header__logo header__nav-sup"
+    "header__buscador header__buscador header__buscador";
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 60% 40%;
+    }
+    #menu-hambur{
+        grid-area: menu-hambur;
     }
     #header__logo{
     grid-area:  header__logo;
@@ -48,17 +51,19 @@ body{
     }
     #header__logo img{
     max-width: 100%;
-    max-height: 100%;
+    max-height: 50%;
     }
     #header__buscador{
     grid-area:  header__buscador;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     }
     #header__buscador input{
-    margin-top: 35px;
-    margin-left: 30px;
     width: 80%;
-    height: 30%;
+    height: 40%;
     border-radius: 20px;
+    
     }
     hr{
     margin: 0;
@@ -66,16 +71,19 @@ body{
     margin-left: 15%;
     }
     #header__nav-sup{
-    grid-area:  header__nav-sup;
+    grid-area: header__nav-sup;
+
     }
     .nav{
     list-style: none;
     display: flex;
     flex-direction:row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding-left: 0;
+    margin-right: 10px;
     }
     #nav-header{
+        display: none;
         background-color:#2c3e50;
     }
     .nav1{
@@ -98,9 +106,13 @@ body{
     /* INICIO INDEX */
     #carrusel{
         grid-area: carrusel;
+        height: 100%;
+        display: flex;
+        align-items: center;
     }
     #carrusel img{
-        width: 100%;
+        display: flex;
+        align-items: center;
     }
     .navegador a{
         height: 20%;
@@ -127,19 +139,20 @@ body{
         display: flex;
         overflow-x: auto;
         overflow-y: hidden;
+        padding: 15px;
     }
-    .Productos {
-        border: none;
-        margin: 15px;
-        margin-left: 15px;
-        min-width: 250px;
-        height: 400px;
+    .Producto {
+        border: 1px solid rgba(128, 128, 128, 0.822);
+        border-radius: 5%;
+        padding: 15px;
+        padding-left: 15px;
+        width: 250px;
+        min-height: 400px;
         text-align: center;
         justify-content: space-between;
-        background-color: bisque;
     }
-    .Productos img{
-       width: 100%;
+    .Producto img{
+       width: 250px;
        height: 250px;
     } 
     #sobre-nosotros{
@@ -255,15 +268,26 @@ body{
         justify-content: center;
         align-items: center;
     }
+    .aside h1{
+        margin: 0 0 0 0;
+    }
     .formulario{
-        margin-top: 30px;
-        margin-left: 30px;
-        margin-right: 30px;
+        margin: 20 20 20 20;
         margin-bottom: 100px;
         grid-area: formulario;
         display: block;
         max-width: 100%;
         height: 100%;
+    }
+    .none{
+        display: none;
+    }
+    .aside ul li{
+        color: black;
+        font-family: "Montserrat", Sans-serif;
+        font-size: 15px;
+        font-weight: 1000;
+        text-decoration: none;
     }
     form{
        border: white;
@@ -280,7 +304,7 @@ body{
     }
     fieldset input{
         width: 100%;
-        height: 20px;
+        height: 30px;
         border: 1px solid grey;
         border-radius: 7px;
         opacity: .5;
@@ -310,6 +334,41 @@ body{
         opacity: 1;
     }
     /* FIN CONTACTOS */
+    /* LETRA */
+    h3 ,h4, a, li{
+        font-family: "Montserrat", Sans-serif;
+    }
+    h1, h2{
+        font-family: "Nunito", sans-serif;
+    }
+    h1{
+        font-size: 35px;
+        font-weight: 700;
+    }
+    h2{
+        font-size: 30px;
+        font-weight: 500;
+    }
+    h3{
+        font-size: 20px;
+        font-weight: 1000;
+    }
+    h4, a, li{
+        font-size: 15px;
+        font-weight: 1000;
+    }
+    .Producto h4{
+        font-family: "Nunito", sans-serif;
+        font-size: 20px;
+        font-weight: 1000;
+        color: #2c3e50;
+    }
+    .submit{
+        color: white;
+        font-family: "Nunito", sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
 @media screen and (min-width: 1200px) {
     #grilla{
@@ -327,6 +386,9 @@ body{
         grid-template-rows: 30px 100px 50px repeat(6,auto) ;
     }
     /* INICIO HEADER */ 
+    #menu-hambur{
+        display: none;
+    }
     #sobre-header{
         background-color: #c0392b;
         grid-area: sobre-header;
@@ -680,40 +742,41 @@ body{
         opacity: .8;
     }
     /* FIN NOSOTROS */
+    /* LETRA */
+    h3 ,h4, a, li{
+        font-family: "Montserrat", Sans-serif;
+    }
+    h1, h2{
+        font-family: "Nunito", sans-serif;
+    }
+    h1{
+        font-size: 35px;
+        font-weight: 700;
+    }
+    h2{
+        font-size: 30px;
+        font-weight: 500;
+    }
+    h3{
+        font-size: 20px;
+        font-weight: 1000;
+    }
+    h4, a, li{
+        font-size: 15px;
+        font-weight: 1000;
+    }
+    .Producto h4{
+        font-family: "Nunito", sans-serif;
+        font-size: 20px;
+        font-weight: 1000;
+        color: #2c3e50;
+    }
+    .submit{
+        color: white;
+        font-family: "Nunito", sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
 
-/* LETRA */
-h3 ,h4, a, li{
-    font-family: "Montserrat", Sans-serif;
-}
-h1, h2{
-    font-family: "Nunito", sans-serif;
-}
-h1{
-    font-size: 35px;
-    font-weight: 700;
-}
-h2{
-    font-size: 30px;
-    font-weight: 500;
-}
-h3{
-    font-size: 20px;
-    font-weight: 1000;
-}
-h4, a, li{
-    font-size: 15px;
-    font-weight: 1000;
-}
-.Producto h4{
-    font-family: "Nunito", sans-serif;
-    font-size: 20px;
-    font-weight: 1000;
-    color: #2c3e50;
-}
-.submit{
-    color: white;
-    font-family: "Nunito", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-}
+
