--- a/Index.css
+++ b/Index.css
@@ -108,7 +108,9 @@ body{
         grid-area: carrusel;
         height: 100%;
         display: flex;
-        align-items: center;
+        align-items: stretch;
+        justify-content: center;
+        overflow-x: hidden;
     }
     #carrusel img{
         display: flex;
@@ -161,16 +163,16 @@ body{
     margin: 30px;
     }
     #marcas{
-        background-color: rgba(128, 128, 128, 0.349);
+        background-color: rgba(128, 128, 128, 0.199);
         margin: 30px;
-        height: 200px;
+        height: 130px;
         border: 1px solid black;
         display: flex;
         overflow-x: auto;
         overflow-y: hidden;   
     }
     #marcas article {
-        border: 2px solid #2c3e50;
+        border:none;
         margin: 15px;
         margin-left: 15px;
         min-width: 150px;
@@ -179,8 +181,13 @@ body{
         justify-content: space-between;
     }
     #marcas article img{
-        max-width: 100%;
-        max-width: 100%;
+        width: 80%;
+        opacity: .5;
+        transition: width 1s, opacity 1s;
+    }
+    #marcas article img:hover{
+        width: 100%;
+        opacity: 1;
     }
     h2{
         text-align: center;
@@ -401,7 +408,7 @@ body{
     div#header{
         grid-area: header;
         background-color:#2c3e50;
-            border: 1px SOLID black;
+        border: 1px SOLID black;
         display: grid;
         grid-template-areas: 
         "header__logo header__buscador header__nav-sup";
@@ -421,10 +428,11 @@ body{
     }
     #header__buscador{
         grid-area:  header__buscador;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     #header__buscador input{
-        margin-top: 35px;
-        margin-left: 30px;
         width: 80%;
         height: 30%;
         border-radius: 20px;
@@ -444,6 +452,7 @@ body{
     }
     #nav-header{
         grid-area: nav-header;
+        display: block;
     }
     .nav1{
         list-style:none; 
@@ -731,6 +740,13 @@ body{
     }
     .texto{
         grid-area: texto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .blanco ul{
+        display: flex;
+        flex-direction: column;
     }
     .foto{
         grid-area: foto;
