--- a/Index.css
+++ b/Index.css
@@ -500,6 +500,25 @@ body{
         font-family: "Montserrat", Sans-serif;
         font-weight: 1000;
     }
+    #sobre-nosotros{
+        background-color: rgba(128, 128, 128, 0.199);
+        margin: 30px 0 0 0;
+        height: auto;
+        display: flex;
+        overflow-x: auto;
+        overflow-y: hidden;   
+    }
+    #sobre-nosotros article{
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+    }
+    #sobre-nosotros article div h5{
+        margin-bottom: 0;
+    }
+    #sobre-nosotros article div h4{
+        margin-top: 0;
+    }
     #ofertas{
         grid-area: ofertas;
         background-color: rgba(128, 128, 128, 0.199);
@@ -550,7 +569,7 @@ body{
     #marcas{
         grid-area: marcas;   
     }
-    #sobre-nosotros, #marcas{
+    #marcas{
         background-color: rgba(128, 128, 128, 0.199);
         margin: 30px 0 0 0;
         height: 160px;
@@ -558,16 +577,16 @@ body{
         overflow-x: auto;
         overflow-y: hidden;   
     }
-    #sobre-nosotros article img, #marcas article img{
+    #marcas article img{
         width: 80%;
         opacity: .5;
         transition: width 1s, opacity 1s;
     }
-    #sobre-nosotros article img:hover, #marcas article img:hover{
+    #marcas article img:hover{
         width: 100%;
         opacity: 1;
     }
-    #sobre-nosotros article, #marcas article {
+    #marcas article {
         border: none;
         margin: 15px;
         margin-left: 180px;
@@ -784,7 +803,7 @@ body{
     h3 ,h4, a, li{
         font-family: "Montserrat", Sans-serif;
     }
-    h1, h2{
+    h1, h2, h5{
         font-family: "Nunito", sans-serif;
     }
     h1{
@@ -800,8 +819,12 @@ body{
         font-weight: 1000;
     }
     h4, a, li{
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 1000;
+    }
+    h5{
+        font-size: 16px;
+        font-weight: 700;
     }
     .Producto h4{
         font-family: "Nunito", sans-serif;
